// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> <RadioGroup.Button /> Snapshots should match snapshot with default radio button 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 126px;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  border-radius: 9999px;
  font-size: 14px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:hover,
.c1:focus {
  background-color: #F5F5FA;
}

.c0 {
  border-style: solid;
  border-color: #F5F5FA;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left: none;
  border-right: none;
}

.c0:first-child {
  border-right-width: 0;
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: #F5F5FA;
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}

.c0:last-child {
  border-left-width: 0;
  border-right-width: 1px;
  border-right-style: solid;
  border-right-color: #F5F5FA;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      <input
        class="c2"
        type="radio"
        value="Radio 1"
      />
      Radio 1
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> <RadioGroup.Button /> Snapshots should match snapshot with small radio button 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 126px;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
  background-color: transparent;
  border-radius: 9999px;
  font-size: 14px;
  height: 32px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:hover,
.c1:focus {
  background-color: #F5F5FA;
}

.c0 {
  border-style: solid;
  border-color: #F5F5FA;
  border-top-width: 1px;
  border-bottom-width: 1px;
  border-left: none;
  border-right: none;
}

.c0:first-child {
  border-right-width: 0;
  border-left-width: 1px;
  border-left-style: solid;
  border-left-color: #F5F5FA;
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}

.c0:last-child {
  border-left-width: 0;
  border-right-width: 1px;
  border-right-style: solid;
  border-right-color: #F5F5FA;
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      <input
        class="c2"
        type="radio"
        value="Radio 1"
      />
      Radio 1
    </label>
  </div>
</div>
`;
